--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="<enlace rel=" preconectar" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./estilo.css">
     <link rel="shortcut icon" href="imagenes/favicon.ico">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Estudio Rossi</title>
 </head>
 
@@ -42,7 +43,7 @@
             <h2 class="subtitulo">Estudio Jurídico - Seguros Generales</h2>
         </section>
         <section class="contenedor-presentacion">
-            <div class="hijo-nuestrafirma">
+            <div class="hijo-nuestrafirma" data-aos="zoom-in">
                 <h3 class="nuestra-firma-titulo">NUESTRA FIRMA</h3>
                 <p class="nuestra-firma-parrafo">Nuestra firma responde a las exigencias de la sociedad actual,
                     asesorando y actuando en las diversas áreas del derecho y del seguro, asistiendo tanto a personas
@@ -55,7 +56,7 @@
                     Patronal Seguros S.A., empresa líder en el mercado asegurador.
                 </p>
             </div>
-            <div hijo-quienessomos>
+            <div class= "hijo-quienessomos" data-aos="zoom-in">
                 <h3 class="quienes-somos-titulo">QUIENES SOMOS</h3>
                 <p class="quienes-somos-parrafo">Somos jóvenes profesionales especializados en el asesoramiento de
                     pequeñas, medianas y grandes empresas, nuestra convicción es la de brindar un servicio de excelencia
@@ -66,7 +67,7 @@
                     previniendo posibles conflictos futuros.
                 </p>
             </div>
-            <div hijo-nuestramision>
+            <div class= "hijo-nuestramision" data-aos="zoom-in">
                 <h3 class="nuestra-mision-titulo">NUESTRA MISION</h3>
                 <p class="nuestra-mision-parrafo">Nuestra misión es defender y afirmar los derechos de nuestros clientes
                     a través de un servicio que exceda sus expectativas. A tal fin, los profesionales de nuestro estudio
@@ -96,6 +97,10 @@
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init()
+    </script>
 </body>
 
 </html>
