--- a/paginas/areas.html
+++ b/paginas/areas.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="df-main-areas">
         <section>
             <h1 class="titulo-areas">Áreas</h1>
         </section>
