--- a/index.html
+++ b/index.html
@@ -6,36 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="<enlace rel=" preconectar" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./estilo.css">
     <link rel="shortcut icon" href="imagenes/favicon.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./bootstrap-5.2.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./estilo.css">
     <title>Estudio Rossi</title>
 </head>
 
 <body>
     <header class="df-navbar">
-        <div class="logo">
-            <img src="./imagenes/favicon.ico" alt="logo">
-        </div>
-        <nav>
-            <ul class="df-ul">
-                <li class="inicio">
-                    <a href="index.html">INICIO</a>
-                </li>
-                <li class="areas">
-                    <a href="./paginas/areas.html">AREAS</a>
-                </li>
-                <li class="extrajudiciales">
-                    <a href="./paginas/extrajudiciales.html">EXTRAJUDICIALES</a>
-                </li>
-                <li class="turnos">
-                    <a href="./paginas/turnos.html">TURNOS</a>
-                </li>
-                <li class="contacto">
-                    <a href="./paginas/contacto.html">CONTACTO</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"><img src="./imagenes/favicon.ico"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/areas.html">Areas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/extrajudiciales.html">Extrajudiciales</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/turnos.html">Turnos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <section class="portada">
