--- a/paginas/extrajudiciales.html
+++ b/paginas/extrajudiciales.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="<enlace rel=" preconectar" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilo.css">
     <link rel="shortcut icon" href="../imagenes/favicon.ico">
     <title>Extrajudiciales</title>
@@ -13,28 +14,34 @@
 
 <body>
     <header class="df-navbar">
-        <div class="logo">
-            <img src="../imagenes/favicon.ico" alt="logo">
-        </div>
-        <nav>
-            <ul class="df-ul">
-                <li class="inicio">
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li class="areas">
-                    <a href="./areas.html">AREAS</a>
-                </li>
-                <li class="extrajudiciales">
-                    <a href="extrajudiciales.html">EXTRAJUDICIALES</a>
-                </li>
-                <li class="turnos">
-                    <a href="./turnos.html">TURNOS</a>
-                </li>
-                <li class="contacto">
-                    <a href="./contacto.html">CONTACTO</a>
-                </li>
-            </ul>
-        </nav>
+
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><img src="../imagenes/favicon.ico"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./areas.html">Areas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="extrajudiciales.html">Extrajudiciales</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./turnos.html">Turnos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <section class="extrajudiciales">
