--- a/paginas/areas.html
+++ b/paginas/areas.html
@@ -115,13 +115,26 @@
         </section>
     </main>
     <footer class="df-footer bg-footer">
-        <div class="redes">
-            <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
-                    class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-whatsapp"></i></a>
+        <section class="ubicacion">
+        <div>
+          <h6 class="font-footer">Estudio Rossi</h6>
+          <h6>Las Heras 843</h6>
+          <h6>Brandsen, Buenos Aires, Argentina</6>
         </div>
-    </footer>
+      </section>
+      <section class="redes-contacto">
+        <div class="redes">
+          <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
+              class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href=""><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <div class="contacto">
+          <h6>2223-527040</h6>
+          <h6>estudiorossi.brandsen@gmail.com</h6>
+        </div>
+      </section>
+      </footer>
     <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
