--- a/paginas/areas.html
+++ b/paginas/areas.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../scss/estilo.css">
     <link rel="shortcut icon" href="../imagenes/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Áreas</title>
 </head>
 
@@ -47,71 +48,51 @@
 
     <main class="df-main-areas">
         <section>
-            <h1 class="titulo-areas">Áreas</h1>
+            <h1 class="titulo-areas">Conocé nuestras áreas de práctica</h1>
         </section>
-        <section class="df-areas">
-            <div class="derecho-laboral">
-                <h3>DERECHO LABORAL</h3>
-                <ul class="derecho-laboral-lista">
-                    <li>
-                        Despidos
-                    </li>
-                    <li>
-                        Accidentes de trabajo
-                    </li>
+        <section class="animate__animated animate__fadeInUpBig df-areas">
+            <div class="card" style="width: 18rem;">
+                <div class="derecho-de-familia">
+                  DERECHO DE FAMILIA
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Alimentos</li>
+                  <li class="list-group-item">Divorcios</li>
+                  <li class="list-group-item">Régimen de Comunicación</li>
+                  <li class="list-group-item">Filiaciones</li>
                 </ul>
-            </div>
-            <div class="derecho-civil">
-                <h3>DERECHO CIVIL</h3>
-                <ul class="derecho-civil-lista">
-                    <li>
-                        Sucesiones
-                    </li>
-                    <li>
-                        Contratos
-                    </li>
-                    <li>
-                        Accidentes de tránsito
-                    </li>
-                    <li>
-                        Desalojos
-                    </li>
-                    <li>
-                        Usucapiones
-                    </li>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <div class="derecho-civil">
+                  DERECHO CIVIL
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Sucesiones</li>
+                  <li class="list-group-item">Contratos</li>
+                  <li class="list-group-item">Accidentes de Tránsito</li>
+                  <li class="list-group-item">Desalojos</li>
+                  <li class="list-group-item">Usucapiones</li>
                 </ul>
-            </div>
-            <div class="derecho-de-familia">
-                <h3>DERECHO DE FAMILIA</h3>
-                <ul class="derecho-de-familia-lista">
-                    <li>
-                        Alimentos
-                    </li>
-                    <li>
-                        Divorcios
-                    </li>
-                    <li>
-                        Regímen de Comunicación
-                    </li>
-                    <li>
-                        Filiaciones
-                    </li>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <div class="derecho-laboral">
+                  DERECHO LABORAL
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Despidos</li>
+                  <li class="list-group-item">Accidentes de Trabajo</li>
                 </ul>
-            </div>
-            <div class="derecho-penal">
-                <h3>DERECHO PENAL</h3>
-                <ul class="derecho-penal-lista">
-                    <li>
-                        Detenciones
-                    </li>
-                    <li>
-                        Excarcelaciones
-                    </li>
-                    <li>
-                        Recursos
-                    </li>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <div class="derecho-penal">
+                  DERECHO PENAL
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Detenciones</li>
+                  <li class="list-group-item">Excarcelaciones</li>
+                  <li class="list-group-item">Recursos</li>
                 </ul>
-            </div>
+              </div>
         </section>
     </main>
     <footer class="df-footer bg-footer">
