--- a/paginas/extrajudiciales.html
+++ b/paginas/extrajudiciales.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../scss/estilo.css">
     <link rel="shortcut icon" href="../imagenes/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Extrajudiciales</title>
 </head>
 
@@ -47,19 +48,21 @@
     </header>
     <main>
         <section class="extrajudiciales">
-            <h1 class="titulo-extrajudiciales">Extrajudiciales</h1>
+            <h1 class="animate__animated animate__backInLeft titulo-extrajudiciales ">¿Tuviste un accidente de tránsito?
+            </h1>
         </section>
+        <div class="contenedor-parrafo-reclamos">
+            <p class="animate__animated animate__backInRight parrafo-reclamos">Te contamos que parte de nuestros
+                servicios, consiste en llevar adelante la
+                gestión extrajudicial de reclamos por accidentes de tránsito, a los fines de lograr un acuerdo justo
+                con las compañías de seguros.</p>
+        </div>
+        <section class="contenedor-formulario-reclamos">
 
-        <section class="contenedor-extraj">
-
-            <div class="div-reclamos">
-                <h3 class="titulo-reclamos">¿Tuviste un accidente de tránsito?</h3>
-                <p class="parrafo-reclamos">Te contamos que parte de nuestros servicios, consiste en llevar adelante la
-                    gestión extrajudicial de reclamos por accidentes de tránsito, a los fines de lograr un acuerdo justo
-                    con las compañías de seguros que lograr reparar los daños que te ocasionaron.</p>
+            <div class="completa-los-datos">
+                <h3>Completá los datos en el siguiente formulario</h3>
             </div>
-
-            <div class="formulario-de-reclamo">
+            <div class="titular">
                 <h3 class="titulo-titular">Sobre el titular del vehiculo</h3>
                 <div class="nombre-y-apellido">
                     <input type="text" name="nombre" placeholder="Nombre y apellido">
@@ -70,7 +73,8 @@
                 <div class="seguro-titular">
                     <input type="text" name="aseguradora" placeholder="Tu compañia de seguros">
                 </div>
-
+            </div>
+            <div class="tercero">
                 <h3 class="titulo-tercero">Sobre el tercero</h3>
 
                 <div class="nombre-y-apellido-tercero">
@@ -82,47 +86,49 @@
                 <div class="seguro-tercero">
                     <input type="text" name="aseguradora-tercero" placeholder="Compañia de seguros">
                 </div>
-
-                <h3 class="datos-siniestro">Sobre el siniestro</h3>
+            </div>
+            <div class="siniestro">
+                <h3 class="titulo-siniestro">Sobre el siniestro</h3>
                 <div class="fecha">
                     <input type="text" name="fecha" placeholder="Fecha">
                 </div>
                 <div class="lugar">
                     <input type="text" name="lugar" placeholder="Lugar (ciudad, provincia, codigo postal)">
                 </div>
+            </div>
+            <section class="contenedor-enviar-datos">
                 <div class="enviar-datos">
                     <input type="submit" value="Enviar datos">
                 </div>
                 <div class="borrar-campos">
                     <input type="reset" value="Borrar campos">
                 </div>
-
-            </div>
-
+            </section>
         </section>
+
     </main>
 
     <footer class="df-footer bg-footer">
         <section class="ubicacion">
-        <div>
-          <h6 class="font-footer">Estudio Rossi</h6>
-          <h6>Las Heras 843</h6>
-          <h6>Brandsen, Buenos Aires, Argentina</6>
-        </div>
-      </section>
-      <section class="redes-contacto">
-        <div class="redes">
-          <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
-              class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href=""><i class="fab fa-whatsapp"></i></a>
-        </div>
-        <div class="contacto">
-          <h6>2223-527040</h6>
-          <h6>estudiorossi.brandsen@gmail.com</h6>
-        </div>
-      </section>
-      </footer>
+            <div>
+                <h6 class="font-footer">Estudio Rossi</h6>
+                <h6>Las Heras 843</h6>
+                <h6>Brandsen, Buenos Aires, Argentina</6>
+            </div>
+        </section>
+        <section class="redes-contacto">
+            <div class="redes">
+                <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
+                        class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-whatsapp"></i></a>
+            </div>
+            <div class="contacto">
+                <h6>2223-527040</h6>
+                <h6>estudiorossi.brandsen@gmail.com</h6>
+            </div>
+        </section>
+    </footer>
     <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
