--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../scss/estilo.css"> 
+  <link rel="stylesheet" href="../scss/estilo.css">
   <link rel="shortcut icon" href="../imagenes/favicon.ico">
   <title>Contacto</title>
 </head>
@@ -48,9 +48,9 @@
   </header>
 
   <main>
-
-    <h1 class="titulo-contacto">Dejanos tu consulta</h1>
-
+    <div class="titulo-contacto">
+      <h1>Dejanos tu consulta</h1>
+    </div>
     <section class="formulario-de-contacto">
 
       <div class="nombre-y-apellido">
@@ -58,6 +58,12 @@
       </div>
       <div class="e-mail">
         <input type="email" name="email" placeholder="E-mail">
+      </div>
+
+      <div class="form-floating">
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+          style="height: 100px"></textarea>
+        <label for="floatingTextarea2">Escribe aquí</label>
       </div>
       <div class="enviar-datos">
         <input type="submit" value="Enviar datos">
@@ -72,24 +78,24 @@
 
   <footer class="df-footer bg-footer">
     <section class="ubicacion">
-    <div>
-      <h6 class="font-footer">Estudio Rossi</h6>
-      <h6>Las Heras 843</h6>
-      <h6>Brandsen, Buenos Aires, Argentina</6>
-    </div>
-  </section>
-  <section class="redes-contacto">
-    <div class="redes">
-      <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
-          class="fab fa-facebook"></i></a>
-      <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-whatsapp"></i></a>
-    </div>
-    <div class="contacto">
-      <h6>2223-527040</h6>
-      <h6>estudiorossi.brandsen@gmail.com</h6>
-    </div>
-  </section>
+      <div>
+        <h6 class="font-footer">Estudio Rossi</h6>
+        <h6>Las Heras 843</h6>
+        <h6>Brandsen, Buenos Aires, Argentina</6>
+      </div>
+    </section>
+    <section class="redes-contacto">
+      <div class="redes">
+        <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
+            class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-whatsapp"></i></a>
+      </div>
+      <div class="contacto">
+        <h6>2223-527040</h6>
+        <h6>estudiorossi.brandsen@gmail.com</h6>
+      </div>
+    </section>
   </footer>
   <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
