--- a/paginas/turnos.html
+++ b/paginas/turnos.html
@@ -46,46 +46,42 @@
   </header>
   <main>
     <section class="contenedor-turnos">
-      <div class="hijo-titulo">
-        <h1 class="titulo-turnos">Obtené tu cosulta presencial</h1>
+      <div class="titulo-turnos">
+        <h1>Obtené tu cosulta presencial</h1>
       </div>
-      <div class="hijo-form-profesional">
-        <div>
-          <input type="text" name="nombre" placeholder="Escribe profesional de elección o tema a tratar">
-        </div>
-        <div class="enviar-datos">
-          <input type="submit" value="Enviar datos">
-        </div>
-        <div class="borrar-campos">
-          <input type="reset" value="Borrar campos">
-        </div>
-      </div>
-      <div class="hijo-calendario">
-        <img src="../imagenes/calendario.jpeg">
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Seleccioná profesional</option>
+        <option value="1">Jimena</option>
+        <option value="2">Emilio</option>
+        <option value="3">Augusto</option>
+      </select>
+      <div class="turnero">
+        <a href="https://calendly.com/estudiorossi" class="link-turnos">Haga click aquí para elegir un turno.</a>
       </div>
     </section>
+
 
   </main>
   <footer class="df-footer bg-footer">
     <section class="ubicacion">
-    <div>
-      <h6 class="font-footer">Estudio Rossi</h6>
-      <h6>Las Heras 843</h6>
-      <h6>Brandsen, Buenos Aires, Argentina</6>
-    </div>
-  </section>
-  <section class="redes-contacto">
-    <div class="redes">
-      <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
-          class="fab fa-facebook"></i></a>
-      <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-whatsapp"></i></a>
-    </div>
-    <div class="contacto">
-      <h6>2223-527040</h6>
-      <h6>estudiorossi.brandsen@gmail.com</h6>
-    </div>
-  </section>
+      <div>
+        <h6 class="font-footer">Estudio Rossi</h6>
+        <h6>Las Heras 843</h6>
+        <h6>Brandsen, Buenos Aires, Argentina</6>
+      </div>
+    </section>
+    <section class="redes-contacto">
+      <div class="redes">
+        <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
+            class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-whatsapp"></i></a>
+      </div>
+      <div class="contacto">
+        <h6>2223-527040</h6>
+        <h6>estudiorossi.brandsen@gmail.com</h6>
+      </div>
+    </section>
   </footer>
   <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
