--- a/paginas/extrajudiciales.html
+++ b/paginas/extrajudiciales.html
@@ -58,52 +58,52 @@
                 con las compañías de seguros.</p>
         </div>
         <section class="contenedor-formulario-reclamos">
+            <form id="form-titular" action="/redireccion">
+                <div class="completa-los-datos">
+                    <h3>Completá los datos en el siguiente formulario</h3>
+                </div>
+                <div class="titular">
+                    <h3 class="titulo-titular">Sobre el titular del vehiculo</h3>
 
-            <div class="completa-los-datos">
-                <h3>Completá los datos en el siguiente formulario</h3>
-            </div>
-            <div class="titular">
-                <h3 class="titulo-titular">Sobre el titular del vehiculo</h3>
-                <div class="nombre-y-apellido">
-                    <input type="text" name="nombre" placeholder="Nombre y apellido">
-                </div>
-                <div class="dominio-titular">
-                    <input type="text" name="dominio" placeholder="Patente de tu vehículo">
-                </div>
-                <div class="seguro-titular">
-                    <input type="text" name="aseguradora" placeholder="Tu compañia de seguros">
-                </div>
-            </div>
-            <div class="tercero">
-                <h3 class="titulo-tercero">Sobre el tercero</h3>
+                    <div class="nombre-y-apellido">
+                        <input type="text" name="nombre" placeholder="Nombre y apellido" id="nombretitular">
+                    </div>
+                    <div class="dominio-titular">
+                        <input type="text" name="dominio" placeholder="Patente de tu vehículo" id="patentetitular">
+                    </div>
+                    <div class="seguro-titular">
+                        <input type="text" name="aseguradora" placeholder="Tu compañia de seguros" id="segurotitular">
+                    </div>
 
-                <div class="nombre-y-apellido-tercero">
-                    <input type="text" name="nombre" placeholder="Nombre y apellido">
                 </div>
-                <div class="dominio-tercero">
-                    <input type="text" name="dominio" placeholder="Patente">
+                <div class="tercero">
+                    <h3 class="titulo-tercero">Sobre el tercero</h3>
+
+                    <div class="nombre-y-apellido-tercero">
+                        <input type="text" name="nombre" placeholder="Nombre y apellido" id="nombretercero">
+                    </div>
+                    <div class="dominio-tercero">
+                        <input type="text" name="dominio" placeholder="Patente" id="patentetercero">
+                    </div>
+                    <div class="seguro-tercero">
+                        <input type="text" name="aseguradora-tercero" placeholder="Compañia de seguros"
+                            id="segurotercero">
+                    </div>
                 </div>
-                <div class="seguro-tercero">
-                    <input type="text" name="aseguradora-tercero" placeholder="Compañia de seguros">
+                <div class="siniestro">
+                    <h3 class="titulo-siniestro">Sobre el siniestro</h3>
+                    <div class="fecha">
+                        <input type="text" name="fecha" placeholder="Fecha" id="fechasiniestro">
+                    </div>
+                    <div class="lugar">
+                        <input type="text" name="lugar" placeholder="Lugar (ciudad, provincia, codigo postal)"
+                            id="lugarsiniestro">
+                    </div>
                 </div>
-            </div>
-            <div class="siniestro">
-                <h3 class="titulo-siniestro">Sobre el siniestro</h3>
-                <div class="fecha">
-                    <input type="text" name="fecha" placeholder="Fecha">
+                <div class="btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="submit" class="btn btn-outline-primary">Enviar Datos</button>
                 </div>
-                <div class="lugar">
-                    <input type="text" name="lugar" placeholder="Lugar (ciudad, provincia, codigo postal)">
-                </div>
-            </div>
-            <section class="contenedor-enviar-datos">
-                <div class="enviar-datos">
-                    <input type="submit" value="Enviar datos">
-                </div>
-                <div class="borrar-campos">
-                    <input type="reset" value="Borrar campos">
-                </div>
-            </section>
+            </form>
         </section>
 
     </main>
@@ -136,7 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
-    <script src="./app.js"></script>
+    <script src="../app.js"></script>
 
 </body>
 
