--- a/paginas/areas.html
+++ b/paginas/areas.html
@@ -61,6 +61,7 @@
                   <li class="list-group-item">Régimen de Comunicación</li>
                   <li class="list-group-item">Filiaciones</li>
                 </ul>
+                <button type="button" class="btn btn-outline-secondary">AGREGAR</button>
               </div>
               <div class="card" style="width: 18rem;">
                 <div class="derecho-civil">
@@ -73,6 +74,7 @@
                   <li class="list-group-item">Desalojos</li>
                   <li class="list-group-item">Usucapiones</li>
                 </ul>
+                <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
               </div>
               <div class="card" style="width: 18rem;">
                 <div class="derecho-laboral">
@@ -82,6 +84,7 @@
                   <li class="list-group-item">Despidos</li>
                   <li class="list-group-item">Accidentes de Trabajo</li>
                 </ul>
+                <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
               </div>
               <div class="card" style="width: 18rem;">
                 <div class="derecho-penal">
@@ -92,8 +95,25 @@
                   <li class="list-group-item">Excarcelaciones</li>
                   <li class="list-group-item">Recursos</li>
                 </ul>
+                <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
               </div>
         </section>
+        <table class="table text-white tabla-carrito">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Servicio</th>
+              <th scope="col">Precio</th>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider">
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+            </tr>
+          </tbody>
+        </table>
     </main>
     <footer class="df-footer bg-footer">
         <section class="ubicacion">
