--- a/paginas/areas.html
+++ b/paginas/areas.html
@@ -2,147 +2,142 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../scss/estilo.css">
-    <link rel="shortcut icon" href="../imagenes/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Áreas</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../scss/estilo.css">
+  <link rel="shortcut icon" href="../imagenes/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <title>Áreas</title>
 </head>
 
 <body>
-    <header>
+  <header>
 
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../imagenes/favicon.ico"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../index.html">INICIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="areas.html">AREAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./extrajudiciales.html">EXTRAJUDICIALES</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./turnos.html">TURNOS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/favicon.ico"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="areas.html">AREAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./extrajudiciales.html">EXTRAJUDICIALES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./turnos.html">TURNOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <main class="df-main-areas">
-        <section>
-            <h1 class="titulo-areas">Conocé nuestras áreas de práctica</h1>
-        </section>
-        <section class="animate__animated animate__fadeInUpBig df-areas">
-            <div class="card" style="width: 18rem;">
-                <div class="derecho-de-familia">
-                  DERECHO DE FAMILIA
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Alimentos</li>
-                  <li class="list-group-item">Divorcios</li>
-                  <li class="list-group-item">Régimen de Comunicación</li>
-                  <li class="list-group-item">Filiaciones</li>
-                </ul>
-                <button type="button" class="btn btn-outline-secondary">AGREGAR</button>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <div class="derecho-civil">
-                  DERECHO CIVIL
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Sucesiones</li>
-                  <li class="list-group-item">Contratos</li>
-                  <li class="list-group-item">Accidentes de Tránsito</li>
-                  <li class="list-group-item">Desalojos</li>
-                  <li class="list-group-item">Usucapiones</li>
-                </ul>
-                <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <div class="derecho-laboral">
-                  DERECHO LABORAL
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Despidos</li>
-                  <li class="list-group-item">Accidentes de Trabajo</li>
-                </ul>
-                <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <div class="derecho-penal">
-                  DERECHO PENAL
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Detenciones</li>
-                  <li class="list-group-item">Excarcelaciones</li>
-                  <li class="list-group-item">Recursos</li>
-                </ul>
-                <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
-              </div>
-        </section>
-        <table class="table text-white tabla-carrito">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Servicio</th>
-              <th scope="col">Precio</th>
-            </tr>
-          </thead>
-          <tbody class="table-group-divider">
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-            </tr>
-          </tbody>
-        </table>
-    </main>
-    <footer class="df-footer bg-footer">
-        <section class="ubicacion">
-        <div>
-          <h6 class="font-footer">Estudio Rossi</h6>
-          <h6>Las Heras 843</h6>
-          <h6>Brandsen, Buenos Aires, Argentina</6>
+  <main class="df-main-areas">
+    <section>
+      <h1 class="titulo-areas">Conocé nuestras áreas de práctica</h1>
+    </section>
+    <section class="animate__animated animate__fadeInUpBig df-areas">
+      <div class="card" style="width: 18rem;">
+        <div class="derecho-de-familia">
+          DERECHO DE FAMILIA
         </div>
-      </section>
-      <section class="redes-contacto">
-        <div class="redes">
-          <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
-              class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href=""><i class="fab fa-whatsapp"></i></a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Alimentos</li>
+          <li class="list-group-item">Divorcios</li>
+          <li class="list-group-item">Régimen de Comunicación</li>
+          <li class="list-group-item">Filiaciones</li>
+        </ul>
+        <button type="button" class="btn btn-outline-secondary">AGREGAR</button>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <div class="derecho-civil">
+          DERECHO CIVIL
         </div>
-        <div class="contacto">
-          <h6>2223-527040</h6>
-          <h6>estudiorossi.brandsen@gmail.com</h6>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Sucesiones</li>
+          <li class="list-group-item">Contratos</li>
+          <li class="list-group-item">Accidentes de Tránsito</li>
+          <li class="list-group-item">Desalojos</li>
+          <li class="list-group-item">Usucapiones</li>
+        </ul>
+        <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <div class="derecho-laboral">
+          DERECHO LABORAL
         </div>
-      </section>
-      </footer>
-    <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-        crossorigin="anonymous"></script>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Despidos</li>
+          <li class="list-group-item">Accidentes de Trabajo</li>
+        </ul>
+        <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <div class="derecho-penal">
+          DERECHO PENAL
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Detenciones</li>
+          <li class="list-group-item">Excarcelaciones</li>
+          <li class="list-group-item">Recursos</li>
+        </ul>
+        <button type="button" class="btn btn-outline-secondary btn-agregar">AGREGAR</button>
+      </div>
+    </section>
+    <table class="table text-white tabla-carrito">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Servicio</th>
+          <th scope="col">Precio</th>
+        </tr>
+      </thead>
+    </table>
+  </main>
+  <footer class="df-footer bg-footer">
+    <section class="ubicacion">
+      <div>
+        <h6 class="font-footer">Estudio Rossi</h6>
+        <h6>Las Heras 843</h6>
+        <h6>Brandsen, Buenos Aires, Argentina</6>
+      </div>
+    </section>
+    <section class="redes-contacto">
+      <div class="redes">
+        <a href="https://www.facebook.com/profile.php?id=100063586502260" target="_blank"><i
+            class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/estudiorossi/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-whatsapp"></i></a>
+      </div>
+      <div class="contacto">
+        <h6>2223-527040</h6>
+        <h6>estudiorossi.brandsen@gmail.com</h6>
+      </div>
+    </section>
+  </footer>
+  <script src="https://kit.fontawesome.com/645149ca8d.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../app.js"></script>
 </body>
 
 </html>
