--- a/paginas/extrajudiciales.html
+++ b/paginas/extrajudiciales.html
@@ -58,7 +58,7 @@
                 con las compañías de seguros.</p>
         </div>
         <section class="contenedor-formulario-reclamos">
-            <form id="form-titular" action="/redireccion">
+            <form id="form-titular" action="/redireccion" class="dg-formulario">
                 <div class="completa-los-datos">
                     <h3>Completá los datos en el siguiente formulario</h3>
                 </div>
@@ -100,7 +100,7 @@
                             id="lugarsiniestro">
                     </div>
                 </div>
-                <div class="btn-group" role="group" aria-label="Basic outlined example">
+                <div class="btn-group btn-reclamo" role="group" aria-label="Basic outlined example">
                     <button type="submit" class="btn btn-outline-primary">Enviar Datos</button>
                 </div>
             </form>
@@ -136,7 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../app.js"></script>
 
 </body>
