--- a/paginas/extrajudiciales.html
+++ b/paginas/extrajudiciales.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="btn-group btn-reclamo" role="group" aria-label="Basic outlined example">
-                    <button type="submit" class="btn btn-outline-primary">Enviar Datos</button>
+                    <button type="submit" class="btn btn-outline-secondary">Enviar Datos</button>
                 </div>
             </form>
         </section>
