--- a/paginas/extrajudiciales.html
+++ b/paginas/extrajudiciales.html
@@ -58,7 +58,7 @@
                 con las compañías de seguros.</p>
         </div>
         <section class="contenedor-formulario-reclamos">
-            <form id="form-titular" action="/redireccion" class="dg-formulario">
+            <form id="form-titular" action="/redireccion">
                 <div class="completa-los-datos">
                     <h3>Completá los datos en el siguiente formulario</h3>
                 </div>
